--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
