--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- title -->
-    <title>Vesco System</title>
+    <title>Vesco</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -24,7 +27,8 @@
 
 <body>
 
-    
+    <h1>Welcome To Vesco Co.</h1>
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
