--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
+    <!-- bootstrap CSS / latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -29,12 +33,16 @@
 
     <h1>Welcome To Vesco Co.</h1>
 
-    <!-- jQuery -->
+    <!-- jQuery JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/qunit/qunit-2.9.2.js" integrity="sha256-EQ5rv6kPFPKQUYY+P4H6fm/le+yFRLVAb//2PfBswfE=" crossorigin="anonymous"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
+
+    <!-- bootstrap JS / latest compiled and minified JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
     
     <!-- custom functions JS -->
     <script src="js/customFunctions.js"></script>
