--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,24 @@
 
 <body>
 
-    <h1>Welcome To Vesco Co.</h1>
+    <!-- Home section -->
+    <section id="home">
+        <div id="home-cover">
+            <div id="home-content-box">
+                <div id="home-content-box-inner">
+
+                    <div id="home-heading">
+                        <h3>HELLO, WE ARE VESCO SYSTEM CO.!<br>Freelan Web Design & Digital Consultancy</h3>
+                    </div>
+
+                    <div id="home-btn">
+                        <a class="btn btn-lg" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- jQuery JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
