updated home section for heading and button with styles.

--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,12 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading">
-                        <h3>HELLO, WE ARE VESCO SYSTEM CO.!<br>Freelan Web Design & Digital Consultancy</h3>
+                        <h3>Hello, We Are Vesco System Co.!</h3>
+                        <h4>The Most Sophisticated Web Design & Digital Consulting Agency</h4>
                     </div>
 
                     <div id="home-btn">
-                        <a class="btn btn-lg" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
+                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
                     </div>
 
                 </div>
