added parallax scrolling effect on home section.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
     <!-- Home section -->
     <section id="home">
-        <div id="home-cover">
+        <div id="home-cover" class="bg-parallax-effect-general">
             <div id="home-content-box">
                 <div id="home-content-box-inner">
 
@@ -50,6 +50,13 @@
             </div>
         </div>
     </section>
+
+    <!-- Temporary spaces -->
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- jQuery JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
