--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,16 @@
 
     <!-- Home section -->
     <section id="home">
-        <div id="home-cover" class="bg-parallax-effect-general">
+        <div id="home-cover" class="bg-parallax-effect-general animated fadeIn">
             <div id="home-content-box">
                 <div id="home-content-box-inner">
 
-                    <div id="home-heading">
+                    <div id="home-heading" class="animated bounceIn delay-1s">
                         <h3>Hello, We Are Vesco System Co.!</h3>
                         <h4>The Most Sophisticated Web Design & Digital Consulting Agency</h4>
                     </div>
 
-                    <div id="home-btn">
+                    <div id="home-btn" class="animated fadeInUp delay-2s">
                         <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
                     </div>
 
