updated animation effect with styles for home section.

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,12 @@
             <div id="home-content-box">
                 <div id="home-content-box-inner">
 
-                    <div id="home-heading" class="animated bounceIn delay-1s">
+                    <div id="home-heading" class="animated bounceIn">
                         <h3>Hello, We Are Vesco System Co.!</h3>
                         <h4>The Most Sophisticated Web Design & Digital Consulting Agency</h4>
                     </div>
 
-                    <div id="home-btn" class="animated fadeInUp delay-2s">
+                    <div id="home-btn" class="animated fadeInUp">
                         <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
                     </div>
 
