updated markup content for services and solution sections.

--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,17 @@
         </div>
     </section>
 
+    <!-- Services and Solutions section -->
+    <section id="services-solutions">
+        <div class="content-box">
+            <div class="content-title">
+                <h3>Services and Solutions</h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
+    </section>
+
     <!-- Temporary spaces -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
