updated markup and styles for services and solutions section.

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                 <h3>Services and Solutions</h3>
                 <div class="content-title-underline"></div>
             </div>
-
+            <!-- Services items section -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -179,8 +179,6 @@
     </section>
 
     <!-- Temporary spaces -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- jQuery JS -->
