added wow.js plugin for pretty animations.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <section id="services-solutions">
         <div class="content-box">
             <!-- Title section -->
-            <div class="content-title">
+            <div class="content-title animated fadeInDown">
                 <h3>Services and Solutions</h3>
                 <div class="content-title-underline"></div>
             </div>
@@ -194,6 +194,9 @@
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
         crossorigin="anonymous"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
+
+    <!-- wow JS -->
+    <script src="js/wow/wow.min.js"></script>
 
     <!-- custom functions JS -->
     <script src="js/customFunctions.js"></script>
