initialised wowjs and added wow class attributes for animations.

--- a/public/index.html
+++ b/public/index.html
@@ -62,12 +62,12 @@
     <section id="services-solutions">
         <div class="content-box">
             <!-- Title section -->
-            <div class="content-title animated fadeInDown">
+            <div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <h3>Services and Solutions</h3>
                 <div class="content-title-underline"></div>
             </div>
             <!-- Services items section -->
-            <div class="container">
+            <div class="container wow flipInX" data-wow-duration="1s" data-wow-delay="2s">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="service-item">
