updated wow class attributes.

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,8 @@
                 <div class="content-title-underline"></div>
             </div>
             <!-- Services items section -->
-            <div class="container wow flipInX" data-wow-duration="1s" data-wow-delay="2s">
-                <div class="row">
+            <div class="container">
+                <div class="row wow flipInX" data-wow-duration="1s" data-wow-delay="2s">
                     <div class="col-md-4">
                         <div class="service-item">
                             <div class="service-item-icon">
