updated markup and styles and animations for about section.

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,7 @@
                     </div>
 
                     <div id="home-btn" class="animated fadeInUp">
-                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="SEE OUR WORK">SEE
-                            OUR WORK</a>
+                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="SEE OUR WORK">SEE OUR WORK</a>
                     </div>
 
                 </div>
@@ -62,13 +61,13 @@
     <section id="services-solutions">
         <div class="content-box">
             <!-- title section -->
-            <div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <h3>Services and Solutions</h3>
                 <div class="content-title-underline"></div>
             </div>
             <!-- services items section -->
             <div class="container">
-                <div class="row wow flipInX" data-wow-duration="1s" data-wow-delay="2s">
+                <div class="row wow animated flipInX" data-wow-duration="1s" data-wow-delay="2s">
                     <div class="col-md-4">
                         <div class="service-item">
                             <div class="service-item-icon">
@@ -194,14 +193,14 @@
                         <div id="about-content-box-outer">
                             <div id="about-content-box-inner">
                                 <!-- title section -->
-                                <div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                                     <h3>About Vesco</h3>
                                     <div class="content-title-underline"></div>
                                 </div>
 
                                 <!-- about description section -->
-                                <div id="about-desc">
-                                    <p>We are driven to deliver greatness in our results with consumer needs in mind.</p><br>
+                                <div id="about-desc" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                                    <p>We are driven to deliver greatness in our results with consumer needs in mind.</p>
                                     <p>Our strengths include strategic approaches and optimized digital features that
                                        possess scalability with opportunities for growth.
                                        Our experiences in dealing with small scale and big scale projects has enabled
@@ -211,8 +210,8 @@
                                 </div>
 
                                 <!-- button section -->
-                                <div id="about-btn">
-                                    <a class="btn btn-lg btn-general" href="#work" role="button">Our Work</a>
+                                <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                    <a class="btn btn-lg btn-general btn-blue" href="#work" role="button">Our Work</a>
                                 </div>
                             </div>
                         </div>
