updated styles, added diagonal background with image for about section.

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
     <!-- About section -->
     <section id="about">
         <!-- right side: image background diagonal section -->
-        <div id="about-bg-diagonal"></div>
+        <div id="about-bg-diagonal" class="bg-parallax-effect-general wow animated fadeIn" data-wow-duration="2s" data-wow-delay="2s"></div>
 
         <!-- left side: content section  -->
         <div class="container">
