--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,9 @@
         </div>
     </section>
 
+    <!-- Portfolios/Work section -->
+    <section id="work"></section>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
