updated markup portfolios work section.

--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,21 @@
     </section>
 
     <!-- Portfolios/Work section -->
-    <section id="work"></section>
+    <section id="work">
+        <div class="content-box">
+            <!-- title section -->
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <h3>Our Proud Work</h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-*"></div>
+            </div>
+        </div>
+    </section>
 
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br>
