--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
         </div>
 
         <div class="container">
-            <div class="row">
+            <div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="col-md-*"></div>
             </div>
         </div>
