--- a/public/index.html
+++ b/public/index.html
@@ -232,8 +232,66 @@
         </div>
 
         <div class="container">
-            <div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
-                <div class="col-md-*"></div>
+            <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                <!-- first row -->
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/1.jpg" title="Work Description Goes Here">
+                            <img src="img/work/1.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/2.jpg" title="Work Description Goes Here">
+                            <img src="img/work/2.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/3.jpg" title="Work Description Goes Here">
+                            <img src="img/work/3.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/4.jpg" title="Work Description Goes Here">
+                            <img src="img/work/4.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+
+                <!-- second row -->
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/5.jpg" title="Work Description Goes Here">
+                            <img src="img/work/5.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/6.jpg" title="Work Description Goes Here">
+                            <img src="img/work/6.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/7.jpg" title="Work Description Goes Here">
+                            <img src="img/work/7.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/8.jpg" title="Work Description Goes Here">
+                            <img src="img/work/8.jpg" alt="Work" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
