updated with container-fluid and added styles adjusting images.

--- a/public/index.html
+++ b/public/index.html
@@ -231,8 +231,9 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+        <!-- container-fluid uses full width container, spanning the entire width of viewport -->
+        <div class="container-fluid">
+            <div class="row no-blank-space wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 <!-- first row -->
                 <div class="col-md-3">
                     <div class="img-wrapper">
