--- a/public/index.html
+++ b/public/index.html
@@ -237,29 +237,29 @@
                 <!-- first row -->
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/1.jpg" title="Work Description Goes Here">
-                            <img src="img/work/1.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-01-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-01-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/2.jpg" title="Work Description Goes Here">
-                            <img src="img/work/2.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-02-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-02-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/3.jpg" title="Work Description Goes Here">
-                            <img src="img/work/3.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-03-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-03-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/4.jpg" title="Work Description Goes Here">
-                            <img src="img/work/4.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-04-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-04-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
@@ -267,29 +267,29 @@
                 <!-- second row -->
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/5.jpg" title="Work Description Goes Here">
-                            <img src="img/work/5.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-05-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-05-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/6.jpg" title="Work Description Goes Here">
-                            <img src="img/work/6.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-06-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-06-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/7.jpg" title="Work Description Goes Here">
-                            <img src="img/work/7.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-07-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-07-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/8.jpg" title="Work Description Goes Here">
-                            <img src="img/work/8.jpg" alt="Work" class="img-responsive">
+                        <a href="img/work/work2/resized-08-600x400.jpg" title="Work Description Goes Here">
+                            <img src="img/work/work2/resized-08-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
