added magnific popup lib tags index.

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/animate/animate.css">
 
+    <!-- magnific popup core CSS -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -316,6 +319,9 @@
 
     <!-- wow JS -->
     <script src="js/wow/wow.min.js"></script>
+
+    <!-- magnific popup core JS -->
+    <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- custom functions JS -->
     <script src="js/customFunctions.js"></script>
