updated image title descriptions gallery.

--- a/public/index.html
+++ b/public/index.html
@@ -240,28 +240,28 @@
                 <!-- first row -->
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-01-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-01-600x400.jpg" title="Creative Web Design">
                             <img src="img/work/work2/resized-01-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-02-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-02-600x400.jpg" title="Web Development">
                             <img src="img/work/work2/resized-02-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-03-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-03-600x400.jpg" title="Mobile Apps Development">
                             <img src="img/work/work2/resized-03-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-04-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-04-600x400.jpg" title="SEO Optimization">
                             <img src="img/work/work2/resized-04-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
@@ -270,28 +270,28 @@
                 <!-- second row -->
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-05-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-05-600x400.jpg" title="e-Commerce">
                             <img src="img/work/work2/resized-05-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-06-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-06-600x400.jpg" title="Support and Maintenance">
                             <img src="img/work/work2/resized-06-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-07-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-07-600x400.jpg" title="Consulting">
                             <img src="img/work/work2/resized-07-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img-wrapper">
-                        <a href="img/work/work2/resized-08-600x400.jpg" title="Work Description Goes Here">
+                        <a href="img/work/work2/resized-08-600x400.jpg" title="Agile Development">
                             <img src="img/work/work2/resized-08-600x400.jpg" alt="Work" class="img-responsive">
                         </a>
                     </div>
