added initial section element for team.

--- a/public/index.html
+++ b/public/index.html
@@ -300,6 +300,9 @@
         </div>
     </section>
 
+    <!-- Team section -->
+    <section id="team"></section>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br>
 
