--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,21 @@
     </section>
 
     <!-- Team section -->
-    <section id="team"></section>
+    <section id="team">
+        <div class="content-box">
+            <!-- title section -->
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <h3>Our Team</h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                <div class="col-md-*"></div>
+            </div>
+        </div>
+    </section>
 
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br>
