updated markup with team member sigle image sections for team.

--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,77 @@
 
         <div class="container">
             <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                <div class="col-md-*"></div>
+                <div class="col-md-12">
+                    <!-- main wrapper -->
+                    <div id="team-members-wrapper">
+                        <!-- single image container -->
+                        <div class="team-member-single">
+                            <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Scotty Hotty</h4>
+                                <h4 class="team-member-designation">CEO & Founder</h4>
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa fa-instagram"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        
+                        <div class="team-member-single">
+                            <img src="img/team/team-2.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Jess Hennessey</h4>
+                                <h4 class="team-member-designation">Co-Founder</h4>
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa fa-instagram"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="team-member-single">
+                            <img src="img/team/team-3.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Sam Walters</h4>
+                                <h4 class="team-member-designation">Technical Manager</h4>
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa fa-instagram"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="team-member-single">
+                            <img src="img/team/team-4.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Alex Cooper</h4>
+                                <h4 class="team-member-designation">Senior UI/UX Developer</h4>
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa fa-instagram"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="team-member-single">
+                            <img src="img/team/team-5.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">James Anderson</h4>
+                                <h4 class="team-member-designation">Senior Full Stack Developer</h4>
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa fa-instagram"></i></a></li>
+                                    <li><a href="#" class="social-icon icon-gray"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- single image container end -->
+                    </div>
+                </div>
             </div>
         </div>
     </section>
