added js and css links owl carousel.

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
     <!-- magnific popup core CSS -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
 
+    <!-- owl carousel 2 CSS -->
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
+
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -409,6 +413,9 @@
 
     <!-- magnific popup core JS -->
     <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <!-- owl carousel JS -->
+    <script src="js/owl-carousel/owl.carousel.min.js"></script>
 
     <!-- custom functions JS -->
     <script src="js/customFunctions.js"></script>
