initialised owl carousel function.

--- a/public/index.html
+++ b/public/index.html
@@ -318,7 +318,7 @@
             <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="col-md-12">
                     <!-- main wrapper -->
-                    <div id="team-members-wrapper">
+                    <div id="team-members-wrapper" class="owl-carousel">
                         <!-- single image container -->
                         <div class="team-member-single">
                             <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
