--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap&subset=latin-ext" rel="stylesheet">
 
     <!-- font awesome -->
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
