--- a/public/index.html
+++ b/public/index.html
@@ -392,6 +392,9 @@
         </div>
     </section>
 
+    <!-- Testimonials section -->
+    <section id="testimonials"></section>
+
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br>
 
