updated markup work section, included container-fluid in content-box.

--- a/public/index.html
+++ b/public/index.html
@@ -231,78 +231,82 @@
 
     <!-- Portfolios/Work section -->
     <section id="work">
+        <!-- content-box -->
         <div class="content-box">
             <!-- title section -->
             <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <h3>Our Proud Work</h3>
                 <div class="content-title-underline"></div>
             </div>
-        </div>
-
-        <!-- container-fluid uses full width container, spanning the entire width of viewport -->
-        <div class="container-fluid">
-            <div class="row no-blank-space wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                <!-- first row -->
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-01-600x400.jpg" title="Creative Web Design">
-                            <img src="img/work/work2/resized-01-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+            <!-- title section end -->
+    
+            <!-- container-fluid uses full width container, spanning the entire width of viewport -->
+            <div class="container-fluid">
+                <div class="row no-blank-space wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                    <!-- first row -->
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-01-600x400.jpg" title="Creative Web Design">
+                                <img src="img/work/work2/resized-01-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-02-600x400.jpg" title="Web Development">
-                            <img src="img/work/work2/resized-02-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-02-600x400.jpg" title="Web Development">
+                                <img src="img/work/work2/resized-02-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-03-600x400.jpg" title="Mobile Apps Development">
-                            <img src="img/work/work2/resized-03-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-03-600x400.jpg" title="Mobile Apps Development">
+                                <img src="img/work/work2/resized-03-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-04-600x400.jpg" title="SEO Optimization">
-                            <img src="img/work/work2/resized-04-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-04-600x400.jpg" title="SEO Optimization">
+                                <img src="img/work/work2/resized-04-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-
-                <!-- second row -->
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-05-600x400.jpg" title="e-Commerce">
-                            <img src="img/work/work2/resized-05-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+    
+                    <!-- second row -->
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-05-600x400.jpg" title="e-Commerce">
+                                <img src="img/work/work2/resized-05-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-06-600x400.jpg" title="Support and Maintenance">
-                            <img src="img/work/work2/resized-06-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-06-600x400.jpg" title="Support and Maintenance">
+                                <img src="img/work/work2/resized-06-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-07-600x400.jpg" title="Consulting">
-                            <img src="img/work/work2/resized-07-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-07-600x400.jpg" title="Consulting">
+                                <img src="img/work/work2/resized-07-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="img-wrapper">
-                        <a href="img/work/work2/resized-08-600x400.jpg" title="Agile Development">
-                            <img src="img/work/work2/resized-08-600x400.jpg" alt="Work" class="img-responsive">
-                        </a>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/work2/resized-08-600x400.jpg" title="Agile Development">
+                                <img src="img/work/work2/resized-08-600x400.jpg" alt="Work" class="img-responsive">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- container-fluid end -->
         </div>
+        <!-- content-box end -->
     </section>
 
     <!-- Team section -->
