updated markup basic structure of testimonials section.

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                 <h3>Services and Solutions</h3>
                 <div class="content-title-underline"></div>
             </div>
-            
+
             <!-- services items section -->
             <div class="container">
                 <div class="row wow animated flipInX" data-wow-duration="1s" data-wow-delay="2s">
@@ -418,7 +418,27 @@
     </section>
 
     <!-- Testimonials section -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <!-- content-box -->
+        <div class="content-box">
+            <!-- title section -->
+            <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <h3>What Our Key Clients Say</h3>
+                <div class="content-title-underline"></div>
+            </div>
+            <!-- title section end -->
+
+            <!-- container -->
+            <div class="container">
+                <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                    <div class="col-md-*">
+                    </div>
+                </div>
+            </div>
+            <!-- container end -->
+        </div>
+        <!-- content-box end --> 
+    </section>
 
     <!-- Temporary spaces -->
     <br><br><br><br><br><br><br><br><br><br>
