--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
                     <div class="row wow animated bounceInDown" data-wow-duration="1s" data-wow-delay="1s">
                         <div class="col-md-12">
                             <!-- parent wrapper div -->
-                            <div id="customer-testimonials" class="text-center">
+                            <div id="customer-testimonials" class="text-center owl-carousel owl-theme">
                                 <!-- single div testimonial 1 -->
                                 <div class="testimonial">
                                     <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
