--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@
     <!-- Testimonials section -->
     <section id="testimonials">
         <!-- testimonials cover -->
-        <div id="testimonials-cover">
+        <div id="testimonials-cover" class="bg-parallax-effect-general">
             <!-- content-box -->
             <div class="content-box">
                 <!-- title section -->
