updated styles content title for testimonials section.

--- a/public/index.html
+++ b/public/index.html
@@ -424,8 +424,7 @@
             <!-- content-box -->
             <div class="content-box">
                 <!-- title section -->
-                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s"
-                    data-wow-delay="1s">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                     <h3>What Our Key Clients Say</h3>
                     <div class="content-title-underline"></div>
                 </div>
