updated styles for image quoates.

--- a/public/index.html
+++ b/public/index.html
@@ -439,7 +439,7 @@
                                 <!-- single div testimonial 1 -->
                                 <div class="testimonial">
                                     <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>
                                             We thank Vesco System for the wonderful job in helping us develop our program.
                                             Everyone was professional, excellent and hard working.
@@ -459,7 +459,7 @@
                                 <!-- single div testimonial 2 -->
                                 <div class="testimonial">
                                     <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>
                                             We would like to express our satisfaction on the cooperation regarding the
                                             development of our web application.
@@ -479,7 +479,7 @@
                                 <!-- single div testimonial 3 -->
                                 <div class="testimonial">
                                     <img src="img/client/client-3.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>
                                             We are very happy with Vesco System; very serious and consistent in their work.
                                             Scotty and his team of programmers have always been there for us all the time.
