added basic markup content for pricing section.

--- a/public/index.html
+++ b/public/index.html
@@ -505,8 +505,30 @@
         <!-- testimonials cover end -->
     </section>
 
+    <!-- Pricing section -->
+    <section id="pricing">
+        <!-- content-box -->
+        <div class="content-box">
+            <!-- title section -->
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <h3>Our Pricing</h3>
+                <div class="content-title-underline"></div>
+            </div>
+            <!-- title section end -->
+
+            <!-- container -->
+            <div class="container">
+                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
+                    <div class="col-md-12"></div>
+                </div>
+            </div>
+            <!-- container end -->
+        </div>
+        <!-- content-box end -->
+    </section>
+
     <!-- Temporary spaces -->
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br>
 
     <!-- jQuery JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
